--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@
       </div>
 
     </section>
+
+    <footer class="text-center mt-5">
+      <p>©Al Amin Sarker Dolon|| 2022-2025</p>
+    </footer>
    
 
 
