--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Backpark</a>
+                            <a class="nav-link" href="#item">Vendor Item</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link">Subcribe</a>
+                            <a class="nav-link" href="#subcribe">Subcribe</a>
                           </li>
                         </ul>
                       </div>
@@ -108,12 +108,12 @@
             </button>
           </div>
     </section>
-    <section>
+    <section id="item">
       <div class="container text-center my-5">
        <div class="row">
         <div class="col-lg-4">
           <div class="p-5 bg-warning border rounded-4  d-flex align-items-center ">
-            <h2 class="text-white">Shoes</h2>
+            <h2 class="text-white">Watch</h2>
             <img src="images/categories/watch.png" alt="">
 
 
@@ -132,7 +132,7 @@
         </div>
         <div class="col-lg-4">
           <div class="p-5 bg-secondary border d-flex align-items-center rounded-4 ">
-            <h2 class="text-white">Shoes</h2>
+            <h2 class="text-white">Bag</h2>
             <img src="images/categories/bag.png" alt="">
 
 
@@ -146,7 +146,7 @@
     </section>
     <section>
 
-      <div class="container">
+      <div class="container " id="shoes">
 
         <div class="card-group">
           <div class="card">
@@ -189,7 +189,7 @@
 
 
     </section>
-    <section style="height: 300px;" class="container mt-5 bg-success d-flex justify-content-center align-items-center text-white rounded-4">
+    <section style="height: 300px;" id="subcribe" class="container mt-5 bg-success d-flex justify-content-center align-items-center text-white rounded-4">
       <div>
         <h2>LETS STAY IN TOUCH</h2>
         <P>Get updates on sales, specials and more</P>
@@ -199,7 +199,7 @@
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             
           </div>
-          
+          <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
 
